# BacktestEngine

./: README.md
cpp_core/: CMakeLists.txt
cpp_core/include/: Asset.h  BacktestEngine.h  BuyAndHoldStrategy.h  CSVLoader.h  Event.h  EventQueue.h  Metrics.h  Portfolio.h  RiskManager.h  Strategy.h  engine.hpp
cpp_core/results/: results.csv
cpp_core/src/: Asset.cpp  BacktestEngine.cpp  BuyAndHoldStrategy.cpp  CSVLoader.cpp  Event.cpp  EventQueue.cpp  Metrics.cpp  Portfolio.cpp  RiskManager.cpp  Strategy.cpp  engine.cpp  main.cpp
python_analysis/: alpha_data.py  analysis.ipynb  results.csv  test_backtester.py
python_analysis/data/: AAPL_av.csv  GOOG_av.csv  MSFT_av.csv
